feat: Add Secure GitHub Authentication to Colab Notebook - Added getpass prompt for secure PAT entry for private repo cloning - Updated COLAB_README.md with instructions on generating a GitHub PAT

--- a/colab/spyt_cloud_optimizer.ipynb
+++ b/colab/spyt_cloud_optimizer.ipynb
@@ -23,17 +23,23 @@
             "outputs": [],
             "source": [
                 "# 1. Environment Setup\n",
-                "# Clone code from GitHub (latest version) & Mount Drive for Data\n",
+                "# Clone code from PRIVATE GitHub Repo & Mount Drive for Data\n",
                 "import os\n",
                 "import shutil\n",
+                "import getpass\n",
                 "from google.colab import drive\n",
                 "\n",
-                "# A. Clone Code\n",
-                "REPO_URL = \"https://github.com/trextrader/spy-iron-condor-trading.git\"\n",
+                "# A. Clone Code (Private Repo Auth)\n",
                 "WORKSPACE_PATH = \"/content/spy-iron-condor-trading\"\n",
                 "\n",
                 "if os.path.exists(WORKSPACE_PATH):\n",
                 "    shutil.rmtree(WORKSPACE_PATH)\n",
+                "\n",
+                "print(\"🔐 Enter GitHub Credentials for Private Repo Access:\")\n",
+                "user = getpass.getpass(\"GitHub Username: \")\n",
+                "token = getpass.getpass(\"GitHub Personal Access Token (PAT): \")\n",
+                "\n",
+                "REPO_URL = f\"https://{user}:{token}@github.com/trextrader/spy-iron-condor-trading.git\"\n",
                 "\n",
                 "print(\"⏳ Cloning repository...\")\n",
                 "!git clone {REPO_URL}\n",
